--- a/.classpath
+++ b/.classpath
@@ -7,6 +7,6 @@
 	<classpathentry kind="lib" path="libs/gdx-backend-lwjgl.jar" sourcepath="libs/gdx-backend-lwjgl-sources.jar"/>
 	<classpathentry kind="lib" path="libs/gdx-backend-lwjgl-natives.jar"/>
 	<classpathentry kind="lib" path="libs/gdx-natives.jar"/>
-	<classpathentry kind="lib" path="/cva-core/libs/eventbus-1.4.jar"/>
+	<classpathentry kind="lib" path="libs/square-otto-1.3.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
