--- a/.classpath
+++ b/.classpath
@@ -1,23 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="libs/gdx-backend-lwjgl.jar" sourcepath="libs/gdx-backend-lwjgl-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/gdx-backend-lwjgl-natives.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/gdx-natives.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/square-otto-1.3.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="/cva-core/libs/gdx-controllers-android.jar"/>
-	<classpathentry exported="true" kind="lib" path="/cva-core/libs/gdx-controllers-desktop-natives.jar"/>
-	<classpathentry exported="true" kind="lib" path="/cva-core/libs/gdx-controllers-desktop.jar"/>
-	<classpathentry exported="true" kind="lib" path="/cva-core/libs/gdx-controllers-gwt.jar"/>
-	<classpathentry exported="true" kind="lib" path="/cva-core/libs/gdx-controllers.jar"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="assets"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/cva-core"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="libs/gdx-backend-lwjgl.jar" sourcepath="libs/gdx-backend-lwjgl-sources.jar"/>
-	<classpathentry kind="lib" path="libs/gdx-backend-lwjgl-natives.jar"/>
-	<classpathentry kind="lib" path="libs/gdx-natives.jar"/>
 	<classpathentry kind="lib" path="libs/gdx-controllers-desktop-natives.jar"/>
 	<classpathentry kind="lib" path="libs/gdx-controllers-desktop.jar"/>
 	<classpathentry kind="lib" path="libs/gdx-controllers.jar"/>
+	<classpathentry kind="lib" path="libs/gdx-backend-lwjgl-natives.jar"/>
+	<classpathentry kind="lib" path="libs/gdx-backend-lwjgl.jar"/>
+	<classpathentry kind="lib" path="libs/gdx-natives.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
